--- a/styles/index.css
+++ b/styles/index.css
@@ -20,11 +20,15 @@
   --fns-box: 0.9em;
 }
 
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: 0.3s ease;
 }
+
 h1, h2, span, li, button {
   font-family: 'Fira Sans', sans-serif;
 }
@@ -41,12 +45,14 @@ body {
   justify-content: space-between;
   gap: 30px;
 }
-body[theme="light"] {
+body[theme='light'] {
   background-color: var(--clr-light-background);
 }
-body[theme="dark"] {
+body[theme='dark'] {
   background-color: var(--clr-dark-background);
 }
+
+/* --- Header --- */
 
 body header {
   width: 100%;
@@ -55,16 +61,16 @@ body header {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 10px 0;
+  padding: 15px 0;
 }
 body header h1 {
   font-size: var(--fns-title);
   font-weight: 500;
 }
-body[theme="light"] header h1 {
+body[theme='light'] header h1 {
   color: var(--clr-light-contrast);
 }
-body[theme="dark"] header h1 {
+body[theme='dark'] header h1 {
   color: var(--clr-dark-contrast);
 }
 
@@ -73,18 +79,70 @@ body header h2 {
   font-weight: 400;
 }
 
-body[theme="light"] header h2 {
+body[theme='light'] header h2 {
   color: var(--clr-light-main);
 }
-body[theme="dark"] header h2 {
+body[theme='dark'] header h2 {
   color: var(--clr-dark-main);
 }
 
-body[theme="light"] footer ul li a img,
-body[theme="light"] div.selector button.slr-options-visibility img {
+/* --- Main --- */
+
+body main {
+  width: 100%;
+  height: 90vh;
+  padding: 0 2vw;
+}
+body main section.actions {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+body main section.actions div.left {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+body main section.actions div.left button.switch {
+  width: clamp(75px, 4vw, 110px);
+  height: 40px;
+  border: none;
+  border-radius: 30px;
+  position: relative;
+}
+body main section.actions div.left button.switch::after {
+  width: 28px;
+  height: 28px;
+  content: '';
+  position: absolute;
+  top: 6px;
+  border-radius: 50%;
+}
+body[theme='light'] main section.actions div.left button.switch {
+  background: var(--clr-light-main);
+}
+body[theme='light'] main section.actions div.left button.switch::after {
+  left: 6px;
+  background: var(--clr-light-background);
+}
+body[theme='dark'] main section.actions div.left button.switch {
+  background: var(--clr-dark-main);
+}
+body[theme='dark'] main section.actions div.left button.switch::after {
+  left: calc(100% - 34px);
+  background: var(--clr-dark-contrast);
+}
+
+/* --- Footer --- */
+
+body[theme='light'] footer ul li a img,
+body[theme='light'] div.selector button.slr-options-visibility img {
   filter: invert(52%) sepia(43%) saturate(561%) hue-rotate(132deg) brightness(97%) contrast(92%);
 }
-body[theme="dark"] footer ul li a img,
-body[theme="dark"] div.selector button.slr-options-visibility img {
+body[theme='dark'] footer ul li a img,
+body[theme='dark'] div.selector button.slr-options-visibility img {
   filter: invert(85%) sepia(88%) saturate(3237%) hue-rotate(181deg) brightness(105%) contrast(101%);
 }
