--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,7 @@
   --clr-dark-background: #1B1F3B;
   --clr-dark-contrast: #E9E6FF;
   --clr-dark-main: #454ADE;
+  --clr-dark-main-rgb: 69, 74, 222;
   /* light theme */
   --clr-light-background: #e8f6ff;
   --clr-light-contrast: #22577A;
@@ -16,7 +17,7 @@
   /* --- Font zize --- */
   --fns-title: 2.4em;
   --fns-subtitle: 1.6em;
-  --fns-text: 1.1em;
+  --fns-text: 1.2em;
   --fns-box: 0.9em;
 }
 
@@ -112,6 +113,17 @@ body main section.actions div.left button.switch {
   border: none;
   border-radius: 30px;
   position: relative;
+  outline: 0px solid #000;
+}
+body[theme='light'] main section.actions div.left button.switch:hover,
+body[theme='light'] main section.actions div.left button.switch:focus {
+  outline: none;
+  background: color-mix(in srgb, var(--clr-light-main), var(--clr-light-contrast));
+}
+body[theme='dark'] main section.actions div.left button.switch:hover,
+body[theme='dark'] main section.actions div.left button.switch:focus {
+  outline: none;
+  background: color-mix(in srgb, var(--clr-dark-main), var(--clr-dark-contrast) 20%);
 }
 body main section.actions div.left button.switch::after {
   width: 28px;
@@ -134,6 +146,79 @@ body[theme='dark'] main section.actions div.left button.switch {
 body[theme='dark'] main section.actions div.left button.switch::after {
   left: calc(100% - 34px);
   background: var(--clr-dark-contrast);
+}
+
+body main section.actions div.left div.selector {
+  position: relative;
+  width: clamp(230px, 14vw, 300px);
+  height: 40px;
+}
+body main section.actions div.left div.selector div.slr-head {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2px 0;
+  background: none;
+}
+body[theme="light"] main section.actions div.left div.selector div.slr-head {
+  border-bottom: 4px solid var(--clr-light-main);
+}
+body[theme="dark"] main section.actions div.left div.selector div.slr-head {
+  border-bottom: 4px solid var(--clr-dark-main);
+}
+body main section.actions div.left div.selector div.slr-head span.slr-selected {
+  font-size: var(--fns-text);
+  font-weight: 400;
+}
+body[theme="light"] main section.actions div.left div.selector div.slr-head span.slr-selected {
+  color: var(--clr-light-contrast);
+}
+body[theme="dark"] main section.actions div.left div.selector div.slr-head span.slr-selected {
+  color: var(--clr-dark-contrast);
+}
+body main section.actions div.left div.selector div.slr-head button.slr-options-visibility {
+  border: none;
+  background: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  outline: 4px solid transparent;
+  outline-offset: -2px;
+}
+body[theme="light"] main section.actions div.left div.selector div.slr-head button.slr-options-visibility:hover,
+body[theme="light"] main section.actions div.left div.selector div.slr-head button.slr-options-visibility:focus {
+  outline: 4px solid var(--clr-light-main);
+}
+body[theme="dark"] main section.actions div.left div.selector div.slr-head button.slr-options-visibility:hover,
+body[theme="dark"] main section.actions div.left div.selector div.slr-head button.slr-options-visibility:focus {
+  outline: 4px solid var(--clr-dark-contrast);
+}
+body main section.actions div.left div.selector div.slr-head button.slr-options-visibility img {
+  width: 100%;
+}
+body main section.actions div.left div.selector ul.slr-options {
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  position: absolute;
+  top: 110%;
+  left: 0;
+}
+body main section.actions div.left div.selector[status="hidden"] ul.slr-options {
+  opacity: 0;
+  visibility: hidden;
+}
+body main section.actions div.left div.selector[status="hidden"] ul.slr-options {
+  opacity: 0;
+  visibility: hidden;
 }
 
 /* --- Footer --- */
