--- a/styles/index.css
+++ b/styles/index.css
@@ -21,13 +21,10 @@
   --fns-box: 0.9em;
 }
 
-*,
-*::after,
-*::before {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: 0.3s ease;
 }
 
 h1, h2, span, li, button {
@@ -47,9 +44,6 @@ body {
   gap: 30px;
   background-color: var(--clr-light-background);
 }
-body.dark {
-  background-color: var(--clr-dark-background);
-}
 
 /* --- Header --- */
 
@@ -67,17 +61,11 @@ body header h1 {
   font-weight: 500;
   color: var(--clr-light-contrast);
 }
-body.dark header h1 {
-  color: var(--clr-dark-contrast);
-}
 
 body header h2 {
   font-size: var(--fns-subtitle);
   font-weight: 400;
   color: var(--clr-light-main);
-}
-body.dark header h2 {
-  color: var(--clr-dark-main);
 }
 
 /* --- Main --- */
@@ -100,43 +88,6 @@ body main section.actions div.left {
   justify-content: center;
   gap: 30px;
 }
-body main section.actions div.left button.switch {
-  width: clamp(75px, 4vw, 110px);
-  height: 40px;
-  border: none;
-  border-radius: 30px;
-  position: relative;
-  outline: 0px solid #000;
-  cursor: pointer;
-  background: var(--clr-light-main);
-}
-body.dark main section.actions div.left button.switch {
-  background: var(--clr-dark-main);
-}
-body main section.actions div.left button.switch:hover,
-body main section.actions div.left button.switch:focus {
-  outline: none;
-  background: color-mix(in srgb, var(--clr-light-main), var(--clr-light-contrast));
-}
-body.dark main section.actions div.left button.switch:hover,
-body.dark main section.actions div.left button.switch:focus {
-  outline: none;
-  background: color-mix(in srgb, var(--clr-dark-main), var(--clr-dark-contrast) 20%);
-}
-body main section.actions div.left button.switch::after {
-  width: 28px;
-  height: 28px;
-  content: '';
-  position: absolute;
-  top: 6px;
-  border-radius: 50%;
-  left: 6px;
-  background: var(--clr-light-background);
-}
-body.dark main section.actions div.left button.switch::after {
-  left: calc(100% - 34px);
-  background: var(--clr-dark-contrast);
-}
 
 body main section.actions div.left div.selector {
   position: relative;
@@ -153,16 +104,10 @@ body main section.actions div.left div.selector div.slr-head {
   background: none;
   border-bottom: 4px solid var(--clr-light-main);
 }
-body.dark main section.actions div.left div.selector div.slr-head {
-  border-bottom: 4px solid var(--clr-dark-main);
-}
 body main section.actions div.left div.selector div.slr-head span.slr-selected {
   font-size: var(--fns-text);
   font-weight: 400;
   color: var(--clr-light-contrast);
-}
-body.dark main section.actions div.left div.selector div.slr-head span.slr-selected {
-  color: var(--clr-dark-contrast);
 }
 body main section.actions div.left div.selector div.slr-head button.slr-options-visibility {
   border: none;
@@ -176,18 +121,15 @@ body main section.actions div.left div.selector div.slr-head button.slr-options-
   outline: 2px solid transparent;
   cursor: pointer;
   outline-offset: -2px;
+  transition: 0.2s ease;
 }
-body main section.actions div.left div.selector div.slr-head button.slr-options-visibility:hover,
-body main section.actions div.left div.selector div.slr-head button.slr-options-visibility:focus {
+body main section.actions div.left div.selector div.slr-head button.slr-options-visibility:is(:hover, :focus) {
   outline: 2px solid var(--clr-light-main);
-}
-body.dark main section.actions div.left div.selector div.slr-head button.slr-options-visibility:hover,
-body.dark main section.actions div.left div.selector div.slr-head button.slr-options-visibility:focus {
-  outline: 2px solid var(--clr-dark-contrast);
 }
 body main section.actions div.left div.selector div.slr-head button.slr-options-visibility img {
   width: 100%;
   transform: rotate(0);
+  transition: 0.2s ease;
 }
 body main section.actions div.left div.selector.visible div.slr-head button.slr-options-visibility img {
   width: 100%;
@@ -208,6 +150,7 @@ body main section.actions div.left div.selector ul.slr-options {
   top: 100%;
   border-radius: 3px;
   background: var(--clr-light-main);
+  transition: 0.2s ease;
 }
 body main section.actions div.left div.selector.visible ul.slr-options {
   opacity: 1;
@@ -231,6 +174,7 @@ body main section.actions div.left div.selector ul.slr-options li button {
   background: none;
   border: none;
   color: var(--clr-light-background);
+  transition: 0.1s ease;
 }
 body main section.actions div.left div.selector ul.slr-options li:first-child button {
   border-radius: 3px 3px 0 0;
@@ -239,6 +183,7 @@ body main section.actions div.left div.selector ul.slr-options li:last-child but
   border-radius: 0 0 3px 3px;
 }
 body main section.actions div.left div.selector ul.slr-options li button:is(:hover, :focus) {
+  outline: none;
   background: var(--clr-light-contrast);
 }
 
@@ -248,7 +193,37 @@ body footer ul li a img,
 body div.selector button.slr-options-visibility img {
   filter: invert(52%) sepia(43%) saturate(561%) hue-rotate(132deg) brightness(97%) contrast(92%);
 }
-body.dark footer ul li a img,
-body.dark div.selector button.slr-options-visibility img {
-  filter: invert(85%) sepia(88%) saturate(3237%) hue-rotate(181deg) brightness(105%) contrast(101%);
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: var(--clr-dark-background);
+  }
+  body header h1 {
+    color: var(--clr-dark-contrast);
+  }
+  body header h2 {
+    color: var(--clr-dark-main);
+  }
+  body main section.actions div.left div.selector div.slr-head {
+    border-bottom: 4px solid var(--clr-dark-main);
+  }
+  body main section.actions div.left div.selector div.slr-head span.slr-selected {
+    color: var(--clr-dark-contrast);
+  }
+  body main section.actions div.left div.selector div.slr-head button.slr-options-visibility:is(:hover, :focus) {
+    outline: 2px solid var(--clr-dark-contrast);
+  }
+  body main section.actions div.left div.selector ul.slr-options {
+    background: var(--clr-dark-main);
+  }
+  body main section.actions div.left div.selector ul.slr-options li button {
+    color: var(--clr-dark-contrast);
+  }
+  body main section.actions div.left div.selector ul.slr-options li button:is(:hover, :focus) {
+    background: color-mix(in srgb, var(--clr-dark-main), var(--clr-dark-background) 50%);
+  }
+  body footer ul li a img,
+  body div.selector button.slr-options-visibility img {
+    filter: invert(85%) sepia(88%) saturate(3237%) hue-rotate(181deg) brightness(105%) contrast(101%);
+  }
 }
