--- a/styles/index.css
+++ b/styles/index.css
@@ -3,26 +3,32 @@
 @import url('/styles/header.css');
 @import url('/styles/footer.css');
 @import url('/styles/selector.css');
+@import url('/styles/board.css');
 
-body main {
+main {
   width: 100%;
   height: 90vh;
   padding: 0 2vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 3vh;
 }
-body main section.actions {
+main section.actions {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-body main section.actions div.left {
+main section.actions div.left {
   width: fit-content;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 30px;
 }
-body main section.actions div.left button#play {
+main section.actions div.left button#play {
   height: 40px;
   padding: 10px 30px;
   width: auto;
@@ -35,26 +41,38 @@ body main section.actions div.left button#play {
   transition: 0.2s ease;
   cursor: pointer;
 }
-body main section.actions div.left button#play:is(:hover, :focus) {
+main section.actions div.left button#play:is(:hover, :focus) {
   outline: none;
   background: var(--clr-light-contrast);
 }
 
-body footer ul li a img,
-body div.selector button.slr-options-visibility img {
+main section.game {
+  width: 100%;
+  border: 2px solid #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: calc(100% - 40px - 3vh);
+  max-width: 100%;
+  overflow: auto;
+  padding: 30px 0;
+}
+
+footer ul li a img,
+div.selector button.slr-options-visibility img {
   filter: invert(52%) sepia(43%) saturate(561%) hue-rotate(132deg) brightness(97%) contrast(92%);
 }
 
 @media (prefers-color-scheme: dark) {
-  body main section.actions div.left button#play {
+  main section.actions div.left button#play {
     background: var(--clr-dark-main);
     color: var(--clr-dark-contrast);
   }
-  body main section.actions div.left button#play:is(:hover, :focus) {
+  main section.actions div.left button#play:is(:hover, :focus) {
     background: color-mix(in srgb, var(--clr-dark-main), var(--clr-dark-background));
   }
-  body footer ul li a img,
-  body div.selector button.slr-options-visibility img {
+  footer ul li a img,
+  div.selector button.slr-options-visibility img {
     filter: invert(85%) sepia(88%) saturate(3237%) hue-rotate(181deg) brightness(105%) contrast(101%);
   }
 }
