--- a/styles/index.css
+++ b/styles/index.css
@@ -47,15 +47,16 @@ main section.actions div.left button#play:is(:hover, :focus) {
 }
 
 main section.game {
-  width: 100%;
+  width: fit-content;
+  height: fit-content;
   border: 2px solid #000;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  max-height: calc(100% - 40px - 3vh);
+  align-items: flex-start;
+  justify-content: flex-start;
+  max-height: 70vh;
   max-width: 100%;
   overflow: auto;
-  padding: 30px 0;
+  padding: 30px;
 }
 
 footer ul li a img,
