--- a/styles/general.css
+++ b/styles/general.css
@@ -10,7 +10,10 @@ h1, h2, span, li, button {
   font-family: 'Fira Sans', sans-serif;
 }
 span#time {
-   font-family: 'Nova Mono', monospace;
+  font-family: 'Nova Mono', monospace;
+  font-size: var(--fns-text);
+  font-weight: 600;
+  color: var(--clr-light-contrast);
 }
 
 body {
@@ -27,5 +30,8 @@ body {
 @media (prefers-color-scheme: dark) {
   body {
     background-color: var(--clr-dark-background);
+  }
+  span#time {
+    color: var(--clr-dark-contrast);
   }
 }
