--- a/styles/selector.css
+++ b/styles/selector.css
@@ -59,6 +59,7 @@ div.selector ul.slr-options {
   top: 100%;
   border-radius: 3px;
   background: var(--clr-light-main);
+  z-index: 10;
   transition: 0.2s ease;
 }
 div.selector.visible ul.slr-options {
